--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@
   background-color: #2d6c65;
 }
 .return-top {
-  display: block;
+  display: none;
   z-index: 9;
   height: 36px;
   line-height: 36px;
