--- a/css/theme.css
+++ b/css/theme.css
@@ -224,6 +224,12 @@ body {
 .link-img:hover:after {
   display: block;
 }
+*.link-img:before {
+  display: none;
+}
+*.link-img:hover:before {
+  display: block;
+}
 .link-img_img-wrap {
   width: 100%;
   height: 160px;
@@ -233,6 +239,7 @@ body {
   width: 100%;
   height: 100%;
   background-position: center;
+  -webkit-background-size: cover;
   background-size: cover;
 }
 .link-img_text {
@@ -329,21 +336,28 @@ body {
   width: 260px;
   height: 36px;
   font-size: 0;
+  vertical-align: bottom;
+}
+*.searchbar {
+  filter: alpha(opacity = 50);
 }
 .searchbar_input {
+  display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 200px;
   padding: 10px;
-  height: 100%;
+  height: 36px;
   border: 0;
   font-size: 16px;
   opacity: 0.5;
 }
 .searchbar_btn {
+  margin: 0;
+  display: inline-block;
   width: 60px;
-  height: 100%;
+  height: 36px;
   padding: 0;
   border: 0;
   color: #fff9b1;
@@ -353,6 +367,9 @@ body {
 }
 .searchbar_btn:hover {
   background-color: #9b933e;
+}
+.searchbar_btn *.searchbar_input {
+  height: 50px;
 }
 /*
  ** 公告列表
@@ -434,6 +451,12 @@ body {
 }
 .arrow:hover {
   opacity: 0.9;
+}
+*.arrow {
+  filter: alpha(opacity=70);
+}
+*.arrow:hover {
+  filter: alpha(opacity=90);
 }
 .arrow.right:before {
   content: "\f061";
