--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,10 @@ head
   link(rel="stylesheet" type="text/css" href="css/theme.css")
   link(rel="stylesheet" type="text/css" href="css/index.css")
   link(rel="stylesheet" type="text/css" href="css/font-awesome.css")
+  <!--[if lt IE 9]>
+  script(src="js/html5shiv.min.js")
+  script(src="js/respond.min.js")
+  <![endif]-->
 body
   .header-bg
   a.return-top#return-top(href="#header")
@@ -271,6 +275,7 @@ body
         .a.btn(href="#") 更多
 
   footer.footer.clearfix.c-w#green-channel
+    .bg-layer
     .container
       .row
         section.x-12.s-5.m-3.l-3.useful-links
@@ -292,27 +297,27 @@ body
           h3 联系我们
           ul
             li
-              span.op7 共青团四川大学委员会邮箱
-              em.op9 scutw@163.com
+              span 共青团四川大学委员会邮箱
+              em scutw@163.com
             li
-              span.op7 新闻投稿邮箱
-              em.op9 scutwnews@qq.com
+              span 新闻投稿邮箱
+              em scutwnews@qq.com
             li
-              span.op7 办公室,对外联络,科技创新,就业创业事宜
-              em.op9 85401222
+              span 办公室,对外联络,科技创新,就业创业事宜
+              em 85401222
             li
-              span.op7 组织部,学生会,青年志愿,社会实践事宜
-              em.op9 85407980
+              span 组织部,学生会,青年志愿,社会实践事宜
+              em 85407980
             li
-              span.op7 宣传部,文化艺术,团委公选课事宜
-              em.op9 85406812
+              span 宣传部,文化艺术,团委公选课事宜
+              em 85406812
             li
-              span.op7 学生社团事宜
-              em.op9 85998669
+              span 学生社团事宜
+              em 85998669
         section.x-12.s-12.m-3.l-3.qr-code
           h3 二维码
           img(src="images/qr-code.png").img-qrcode
-          p.qrcode-desc 川大共青团
+          p.qrcode-desc.op7 川大共青团
   script(type="text/javascript" src="js/melon.js")
   script(type="text/javascript" src="js/index.js")
 
