--- a/index.jade
+++ b/index.jade
@@ -316,7 +316,7 @@ body
               em 85998669
         section.x-12.s-12.m-3.l-3.qr-code
           h3 二维码
-          img(src="images/qr-code.png").img-qrcode
+          img(src="images/qr-code.png").img-qrcode.op7
           p.qrcode-desc.op7 川大共青团
   script(type="text/javascript" src="js/melon.js")
   script(type="text/javascript" src="js/index.js")
