--- a/index.jade
+++ b/index.jade
@@ -19,15 +19,15 @@ body
       input.searchbar_input(type="text" placeholder="keyword")
       input.searchbar_btn(type="submit" value="搜索")
     .header-text
-      p.welcome WELCOME TO
+      p.welcome.op8.f-rw.fl WELCOME TO
       h1.title 青春川大
-      .desc.mt1
+      .desc.mt1.op8
         p
           span 感受青春律动
           span.ml2 释放青春活力
         p —— 触手可及的川大共青团
     nav.nav.clearfix.c-w.tc
-      ul.navbar.mauto#navbar
+      ul.navbar.mauto.op8#navbar
         li
           a.link-spec(href='#special') 专题
         li
@@ -42,7 +42,7 @@ body
           a.link-gc(href='#green-channel') 绿色通道
   section.special.clearfix#special
     h2.title.f8.c-grey-2.tc 专题
-      span.c-grey-4.fl.ml1.f-rw SPECIAL
+      span.c-grey-4.fl.ml1.f-rw.fl SPECIAL
     p.title-desc 点面结合 板块互联 扬帆新航
     .divider
     .container
@@ -295,7 +295,7 @@ body
               a(href="#") Myouth
         section.x-12.s-7.m-6.l-6.contact-us
           h3 联系我们
-          ul
+          ul.op7
             li
               span 共青团四川大学委员会邮箱
               em scutw@163.com
