--- a/css/index.css
+++ b/css/index.css
@@ -95,11 +95,10 @@
   text-align: center;
 }
 .header .welcome {
-  font-family: Raleway, sans-serif;
+  font-weight: 300;
   color: #fff;
   font-size: 40px;
   margin: 0;
-  opacity: 0.8;
 }
 .header .title {
   margin: 0;
@@ -114,13 +113,11 @@
   font-weight: 300;
   color: #fff;
   text-align: center;
-  opacity: 0.8;
 }
 .header .desc p {
   margin: 0;
 }
 .header .nav {
-  opacity: 0.8;
   width: 100%;
   position: absolute;
   bottom: 80px;
@@ -280,7 +277,7 @@
   opacity: 0.9;
 }
 *.youth-league .intro-wrap {
-  fliter: alpha(opacity=90);
+  filter: alpha(opacity=90);
 }
 /*
  ** 学生园地
@@ -362,9 +359,6 @@
   font-size: 24px;
   line-height: 60px;
   margin: 0;
-}
-.footer .contact-us li {
-  opacity: 0.7;
 }
 .footer .contact-us li a {
   font-weight: 500;
