commit on mac os

--- a/components.jade
+++ b/components.jade
@@ -97,6 +97,61 @@ body
   section.clearfix.sec-arrow
     button.arrow
     button.arrow.right
+  section.clearfix
+    ul.news-list.clearfix
+      li.clearfix
+        a.link-img-hz
+          .link-img-hz_img-wrap
+            img.link-img-hz_img(src="images/index-bg-1.jpg")
+          .link-img-hz_text-wrap
+            h3.link-img-hz_title 四川大学120周年校庆志愿者总结表彰大会成功举行
+            p.link-img-hz_info 2016年11月3日
+            p.link-img-hz_desc 11月3日，四川大学120周年校庆志愿者总结表彰大会在文华活动中心音乐厅成功举行。校党委副书记李向成、校长助理、学工部部长郭勇参加大会。大会由校团委书记徐海鑫主持。
+      li
+        a.link-img-hz
+          .link-img-hz_img-wrap
+            img.link-img-hz_img(src="images/index-bg-2.jpg")
+          .link-img-hz_text-wrap
+            h3.link-img-hz_title 校团委成功举办“两学一做”专题学习会
+            p.link-img-hz_info 2016年11月2日
+            p.link-img-hz_desc 11月2日，校团委在行政楼105举办“两学一做”专题学习会。校团委全体成员参加。
+      li
+        a.link-img-hz
+          .link-img-hz_img-wrap
+            img.link-img-hz_img(src="images/index-bg-3.jpg")
+          .link-img-hz_text-wrap
+            h3.link-img-hz_title 挑战杯国赛终审决赛赛前培训会成功举办
+            p.link-img-hz_info 2015年11月2日
+            p.link-img-hz_desc 11月4日，校科协成功举办挑战杯国赛终审决赛赛前培训会。我校进入国赛决赛的4支团队参与培训会。
+      li
+        a.link-img-hz
+          .link-img-hz_img-wrap
+            img.link-img-hz_img(src="images/index-bg-4.jpg")
+          .link-img-hz_text-wrap
+            h3.link-img-hz_title 四川大学120周年校庆志愿者总结表彰大会成功举行
+            p.link-img-hz_info 2015年11月3日
+            p.link-img-hz_desc 11月3日，四川大学120周年校庆志愿者总结表彰大会在文华活动中心音乐厅成功举行。校党委副书记李向成、校长助理、学工部部长郭勇参加大会。大会由校团委书记徐海鑫主持。
+  section.clearfix
+    ul.navbar-vt
+      li
+        a 挑战杯
+      li
+        a 大创
+      li
+        a.curr 社会实践
+      li
+        a 公益志愿
+      li
+        a 学术科技
+  section.clearfix
+    .navbar-page
+      span.navbar-page_prev
+      span.navbar-page_page 1
+      span.navbar-page_page.curr 2
+      span.navbar-page_page 3
+      span.navbar-page_dots ...
+      span.navbar-page_page 4
+      span.navbar-page_next
   footer.footer
 
 
