header文字特效 link-square扫光特效

--- a/css/index.css
+++ b/css/index.css
@@ -79,6 +79,9 @@
   right: 0;
   margin: auto;
 }
+.header .searchbar_input {
+  background: #fff;
+}
 .header .bg-img {
   position: absolute;
   bottom: 0;
