--- a/css/index.less
+++ b/css/index.less
@@ -86,6 +86,9 @@
     right: 0;
     margin: auto;
   }
+  .searchbar_input {
+    background: #fff;
+  }
   .bg-img {
     position: absolute;
     bottom: 0;
