--- a/index.jade
+++ b/index.jade
@@ -18,14 +18,41 @@ body
     form.searchbar
       input.searchbar_input(type="text" placeholder="keyword")
       input.searchbar_btn(type="submit" value="搜索")
-    .header-text
-      p.welcome.op8.f-rw.fl WELCOME TO
-      h1.title 青春川大
+    .header-text#header-text
+      p.welcome.op8.f-rw.fl
+        span WELCOME
+        span.ml2 TO
+      h1.title
+        span 青
+        span 春
+        span 川
+        span 大
       .desc.mt1.op8
         p
-          span 感受青春律动
-          span.ml2 释放青春活力
-        p —— 触手可及的川大共青团
+          span 感
+          span 受
+          span 青
+          span 春
+          span 律
+          span 动
+          span.ml2 释
+          span 放
+          span 青
+          span 春
+          span 活
+          span 力
+        p
+          span ——
+          span 触
+          span 手
+          span 可
+          span 及
+          span 的
+          span 川
+          span 大
+          span 共
+          span 青
+          span 团
     nav.nav.clearfix.c-w.tc
       ul.navbar.mauto.op8#navbar
         li
@@ -49,18 +76,23 @@ body
       .row
         .links.tc.clearfix
           a.link-square.lighter
+            .link-square_bg
             i.fa.fa-trophy.fa-2x.link-square_icon
             h4.link-square_desc 挑战杯
           a.link-square.light
+            .link-square_bg
             i.fa.fa-laptop.fa-2x.link-square_icon
             h4.link-square_desc 大创
           a.link-square
+            .link-square_bg
             i.fa.fa-globe.fa-2x.link-square_icon
             h4.link-square_desc 社会实践
           a.link-square.dark
+            .link-square_bg
             i.fa.fa-heart.fa-2x.link-square_icon
             h4.link-square_desc 公益志愿
           a.link-square.darker
+            .link-square_bg
             i.fa.fa-search.fa-2x.link-square_icon
             h4.link-square_desc 学术科技
   section.news.clearfix.bg-grey-1#news
